Issue #570: Introducing EntryLogManager.
- fixing ratcheck compile time issues
- fixing failing testcases

This is < sub-task5  > of Issue #570